--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
 .App {
 	text-align: center;
+}
+.list-view {
+	text-align: center;
 	display: flex;
 	justify-content: center;
 }
 
-.App > div {
+.list-view > div {
 	margin: 20px;
 }
 
