made item list component

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,12 @@
 .App {
-	width: 30%;
-	height: 90%;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+	width: 50vw;
 	border: 1px solid red;
 	border-radius: 25px;
 	overflow: hidden;
+}
+
+.header {
+	border-bottom: 1px solid black;
 }
 
 .days {
